<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_allpoints"
        android:title="@string/allpoints"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_list_d"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_filter"
        android:title="@string/filter"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_filter_d"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        app:showAsAction="never"
        android:title="@string/help"/>

    <item
        android:id="@+id/action_about"
        app:showAsAction="never"
        android:title="@string/about"/>
</menu>
